# pythonProject5

./: index.html  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: action.yml
10/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
10/widgets/: behaviors.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
11/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  history.json
11/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
12/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
12/widgets/: duration.json  executors.json  severity.json  summary.json
3/export/: influxDbData.txt
3/history/: categories-trend.json
3/widgets/: executors.json  retry-trend.json
4/export/: influxDbData.txt
4/history/: categories-trend.json  history-trend.json  retry-trend.json
4/widgets/: executors.json
5/data/: behaviors.csv  (+6 more)
last-history/: history-trend.json
tests/: test_main.py
(+68 files in other folders)
