[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["Yuriyvas <yuriy.vassiliev2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
allure-pytest = "^2.12.0"
selenium-firefox = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
